# auto_clicker

./: .gitignore  MANIFEST.in  README.md  __init__.py  grid.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
auto_clicker/: __init__.py  __main__.py  _configurations.py
