[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-clicker"
version = "0.1.0"
description = "A threaded, class-based auto clicker utility for automation tasks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ryan", email = "your-email@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "keyboard>=0.13.5",
    "pynput>=1.7.6",
    "ait>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/auto-clicker"
Documentation = "https://github.com/yourusername/auto-clicker/wiki"
Repository = "https://github.com/yourusername/auto-clicker.git"
Issues = "https://github.com/yourusername/auto-clicker/issues"

[project.scripts]
auto-clicker = "auto_clicker.__main__:main"

[tool.setuptools]
packages = ["auto_clicker"]

[tool.setuptools.package-data]
auto_clicker = ["grid.txt"]
